--- a/WebFileManager/appsettings.json
+++ b/WebFileManager/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=localhost;port=3308;database=webtest;user=root;password=citroen82;Allow User Variables=True"
+    "Default": "Server=;Database=;Uid=;Pwd=;Allow User Variables=True",
   },
   "Logging": {
     "LogLevel": {
